Prevent toolbar position shift when current page number changes

--- a/src/common/stylesheets/components/_toolbar.scss
+++ b/src/common/stylesheets/components/_toolbar.scss
@@ -50,6 +50,11 @@
 	#numPages {
 		color: var(--fill-secondary);
 		margin-left: 0;
+		display: flex;
+
+		div {
+			position: absolute;
+		}
 	}
 
 	@include macOS-inactive-opacity;
